[tool.poetry]
name = "django-poetry-docker"
version = "0.2.0"
description = "Django-Poetry on Docker template"
authors = "Vu H. Chu-Le"

[tool.poetry.dependencies]
python = ">=3.10,<4"
django = ">=5.0.3"
django-extensions = "^3.2.3"
psycopg-binary = "*"
Pillow = ">=10.0.0"
django-widget-tweaks = "^1.5.0"
gunicorn = ">=21.2.0"
Werkzeug = ">=3.0.1"
certifi = ">=2023.7.22"

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"

[build-system]
requires = ["poetry>=1.8"]
build-backend = "poetry.masonry.api"
